--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -1,11 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  image_1: MyString
-  image_2: MyString
-  image_3: MyString
+  img_url: MyString
 
 two:
-  image_1: MyString
-  image_2: MyString
-  image_3: MyString
+  img_url: MyString
